examples/test/testpolicy7243.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7243
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key23: value34
      key39: value30
      key27: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value42
      podSelector:
        matchLabels:
          key33: value5
          key12: value23
          key32: value14
